javaDSL/src/test/resources/typeSystemTestModels/invalid/statements/ThrowIsValid.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.statements;

import java.io.IOException;

public class ThrowIsValid {
  public void test(){
    if(true) {
      throw new Integer(10);
    }
  }
}
